TestRepo2/src/objects/Recipe_Media__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <picklist>
            <picklistValues>
                <fullName>FALSE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Display_ID__c</fullName>
        <externalId>true</externalId>
        <label>Content Display ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_URL__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Content_id__c,  Name,&apos;_blank&apos; )</formula>
        <label>Content URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_id__c</fullName>
        <label>Content Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>HYPERLINK (&quot;https://na1.salesforce.com/&quot;&amp; Content_Display_ID__c ,IMAGE(&quot;https://c.na1.content.force.com/sfc/servlet.shepherd/version/download/&quot; + Content_id__c  , Name,100,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_External_Id__c</fullName>
        <description>FIeld that helps during dataload to prevent duplicates</description>
        <externalId>true</externalId>
        <label>Media External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Image__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Media_External_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Content_Display_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recipe Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>